--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,5 +11,17 @@
                     </div>
                 </div>
             </div>
+            <div class="row row-buttons">
+                <div class="col-sm-6">
+                    <a href="https://metacpan.org/pod/HTML::FormFu" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Download FormFu from CPAN
+                    </a>
+                </div>
+                <div class="col-sm-6">
+                    <a href="https://github.com/FormFu" class="btn btn-lg btn-outline">
+                        <i class="fa fa-github"></i> FormFu project on GitHub
+                    </a>
+                </div>
+            </div>
         </div>
     </header>
