Use variable, and try btn-block

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,13 +13,13 @@
             </div>
             <div class="row row-buttons">
                 <div class="col-sm-6">
-                    <a href="https://metacpan.org/pod/HTML::FormFu" class="btn btn-lg btn-outline">
+                    <a href="https://metacpan.org/pod/HTML::FormFu" class="btn btn-lg btn-outline btn-block">
                         <i class="fa fa-download"></i> Download FormFu from CPAN
                     </a>
                 </div>
                 <div class="col-sm-6">
-                    <a href="https://github.com/FormFu" class="btn btn-lg btn-outline">
-                        <i class="fa fa-github"></i> FormFu project on GitHub
+                    <a href="{{ site.social[1].url" class="btn btn-lg btn-outline btn-block">
+                        <i class="fa fa-{{ site.social[1].title }}"></i> FormFu project on GitHub
                     </a>
                 </div>
             </div>
