--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,8 +18,8 @@
                     </a>
                 </div>
                 <div class="col-sm-6">
-                    <a href="{{ site.social.last.url" class="btn btn-lg btn-outline btn-block">
-                        <i class="fa fa-{{ site.social.last.title }}"></i> FormFu project on GitHub
+                    <a href="https://github.com/FormFu" class="btn btn-lg btn-outline btn-block">
+                        <i class="fa fa-github"></i> FormFu project on GitHub
                     </a>
                 </div>
             </div>
