--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,12 +14,12 @@
             <div class="row row-buttons">
                 <div class="col-sm-6">
                     <a href="https://metacpan.org/pod/HTML::FormFu" class="btn btn-lg btn-outline btn-block">
-                        <i class="fa fa-download"></i> Download FormFu from CPAN
+                        <i class="fa fa-download"></i> DOWNLOAD
                     </a>
                 </div>
                 <div class="col-sm-6">
                     <a href="https://github.com/FormFu" class="btn btn-lg btn-outline btn-block">
-                        <i class="fa fa-github"></i> FormFu project on GitHub
+                        <i class="fa fa-github"></i> GITHUB
                     </a>
                 </div>
             </div>
