--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     {% include header.html %}
     {% include about.html %}
     {% include features_grid.html %}
+    {% include developers.html %}
 
     {% if site.contact == "static" %}
     {% include contact_static.html %}
