Make some changes to developers section

--- a/_includes/developers.html
+++ b/_includes/developers.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="col-sm-4">
                         <i class="fa fa-random"></i>
-                        <h4>Web Framework</h4>
+                        <h4>Web Frameworks</h4>
                         <p>We use <a target="_blank" href="http://www.mojolicious.org/">Mojolicious</a>, a real-time web framework.</p>
                     </div>
                     <div class="col-sm-4">
@@ -30,20 +30,17 @@
                     <div class="col-sm-4">
                         <i class="fa fa-language"></i>
                         <h4>Internationalization (i18n)</h4>
-                        <p>We use <a target="_blank" href="https://www.transifex.com/ravada/ravada/">Transifex</a> to provide a cleaner and easy to use interface for translators.</p>
-                        <p>It's meant for adapting applications and text to enable their usability in a particular cultural or linguistic market.</p>
+                        <p>Error and notice messages are provided in 18+ languages. It's trivial to add yours, or swap in your own messaging.</p>
                     </div>
                     <div class="col-sm-4">
                         <i class="fa fa-github"></i>
                         <h4>Github</h4>
-                        <p>We use Git as a version control system for tracking changes in computer files and coordinating work on those files among our <a target="_blank" href="https://github.com/UPC/ravada/graphs/contributors">team</a>. You're invited to contribute!</p>
-                        <p>Our code is licensed with <a target="_blank" href="https://github.com/UPC/ravada/blob/master/LICENSE">AGPL</a> and is available in <a target="_blank" href="http://bit.ly/get_ravada">Github</a>.</p>
-
+                        <p>All the Project's source code, documentation, and even this website are hosted on GitHub. Making contributions as easy as humans have yet developed.</p>
                     </div>
                     <div class="col-sm-4">
                         <i class="fa fa-rocket"></i>
-                        <h4>A lot of Free Software</h4>
-                        <p>We use a lot of powerful free source like <a target="_blank" href="https://www.gnu.org/">GNU</a>/Linux <a target="_blank" href="https://www.ubuntu.com/server">Ubuntu</a>, <a target="_blank" href="http://www.linux-kvm.org/">KVM</a>, <a target="_blank" href="http://libvirt.org/">Libvirt</a> or <a target="_blank" href="https://www.spice-space.org/">Spice</a>, among others. Responsive web made with <a target="_blank" href="getbootstrap.com/">Bootstrap</a> and <a target="_blank" href="https://angularjs.org/">AngularJS</a>.</p>
+                        <h4>Free Software</h4>
+			<p>FormFu is provided with a permissive license (<a href="https://fastapi.metacpan.org/source/NIGELM/HTML-FormFu-2.05/LICENSE">GPLv1 + Artistic</a>) which allows you, your company, your project etc. to use it for free and without any costs. In a commercial setting you should udnerstand the requirements of these licenses.</p>
                     </div>
                 </div>
             </div>
