--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -11,3 +11,12 @@
   height: 120px;
   width: 120px;
 }
+
+/* Adjust buttons under the title */
+.row-buttons {
+    margin-top: 30px;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
