--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,7 @@
                         <a href="#developers">Developers</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#help">Help</a>
                     </li>
                 </ul>
             </div>
