Adjust perl mention

--- a/_includes/developers.html
+++ b/_includes/developers.html
@@ -13,7 +13,7 @@
                         <i class="fa fa-cogs"></i>
                         <h4>Perl</h4>
                         <p>We're proud to program it in <a target="_blank" href="https://www.perl.org/">Perl</a>.</p>
-                        <p>Perl 5 is a highly capable, feature-rich programming language with over 29 years of development. <a target="_blank" href="https://www.perl.org/about.html">More about why we love Perl...</a></p>
+                        <p>Feature-rich and 30 years young, read more <a target="_blank" href="https://www.perl.org/about.html">about why we love Perl...</a></p>
                     </div>
                     <div class="col-sm-4">
                         <i class="fa fa-random"></i>
@@ -40,7 +40,7 @@
                     <div class="col-sm-4">
                         <i class="fa fa-rocket"></i>
                         <h4>Free Software</h4>
-			<p>FormFu is provided with a permissive license (<a href="https://fastapi.metacpan.org/source/NIGELM/HTML-FormFu-2.05/LICENSE">GPLv1 + Artistic</a>) which allows you, your company, your project etc. to use it for free and without any costs. In a commercial setting you should udnerstand the requirements of these licenses.</p>
+                        <p>FormFu is provided with a permissive license (<a href="https://fastapi.metacpan.org/source/NIGELM/HTML-FormFu-2.05/LICENSE">GPLv1 + Artistic</a>) which allows you, your company, your project etc. to use it for free and without any costs. In a commercial setting you should udnerstand the requirements of these licenses.</p>
                     </div>
                 </div>
             </div>
