--- a/_includes/developers.html
+++ b/_includes/developers.html
@@ -30,17 +30,17 @@
                     <div class="col-sm-4">
                         <i class="fa fa-language"></i>
                         <h4>Internationalization (i18n)</h4>
-                        <p>Error and notice messages are provided in 18+ languages. It's trivial to add yours, or swap in your own messaging.</p>
+                        <p>Error and notice messages are provided in 18+ languages. It's trivial to add yours, or swap in your own custom messages.</p>
                     </div>
                     <div class="col-sm-4">
                         <i class="fa fa-github"></i>
                         <h4>Github</h4>
-                        <p>All the Project's source code, documentation, and even this website are hosted on GitHub. Making contributions as easy as humans have yet developed.</p>
+                        <p>All the Project's source code, documentation, and even this website are hosted on GitHub. Contributions are easy and quickly reviewed.</p>
                     </div>
                     <div class="col-sm-4">
                         <i class="fa fa-rocket"></i>
                         <h4>Free Software</h4>
-                        <p>FormFu is provided with a permissive license (<a href="https://fastapi.metacpan.org/source/NIGELM/HTML-FormFu-2.05/LICENSE">GPLv1 + Artistic</a>) which allows you, your company, your project etc. to use it for free and without any costs. In a commercial setting you should udnerstand the requirements of these licenses.</p>
+                        <p>FormFu is provided with a permissive license (<a href="https://fastapi.metacpan.org/source/NIGELM/HTML-FormFu-2.05/LICENSE">GPLv1 + Artistic</a>) so has no cost to use. Please understand the license requirements though.</p>
                     </div>
                 </div>
             </div>
