Adjust developers tile

--- a/_includes/developers.html
+++ b/_includes/developers.html
@@ -21,9 +21,9 @@
                         <p>We use <a target="_blank" href="http://www.mojolicious.org/">Mojolicious</a>, a real-time web framework.</p>
                     </div>
                     <div class="col-sm-4">
-                        <i class="fa fa-database"></i>
-                        <h4>Data Modeling</h4>
-                        <p>We use <a target="_blank" href="https://www.mysql.com">MySQL</a>. It's the world's most popular open source database. With its proven performance, reliability, and ease-of-use.</p>
+                        <i class="fa fa-code"></i>
+                        <h4>Made with Moose</h4>
+                        <p>We use <a target="_blank" href="https://metacpan.org/pod/Moose">Moose</a>, A postmodern object system for Perl 5. With Moose you can think more about what you want to do and less about the mechanics of OOP.</p>
                     </div>
                 </div>
                 <div class="row">
