Add link to github icon

--- a/_includes/developers.html
+++ b/_includes/developers.html
@@ -35,7 +35,7 @@
                     <div class="col-sm-4">
                         <i class="fa fa-github"></i>
                         <h4>Github</h4>
-                        <p>All the Project's source code, documentation, and even this website are hosted on GitHub. Contributions are easy and quickly reviewed.</p>
+                        <p>All the Project's source code, documentation, and even this website are hosted on <a target="_blank" href="https://github.com/FormFu">GitHub</a>. Contributions are easy and quickly reviewed.</p>
                     </div>
                     <div class="col-sm-4">
                         <i class="fa fa-rocket"></i>
