--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,6 +25,9 @@
                         <a href="#features">Features</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#gettingstarted">Get Started</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#developers">Developers</a>
                     </li>
                     <li class="page-scroll">
