--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     {% include header.html %}
     {% include about.html %}
     {% include features_grid.html %}
+    {% include gettingstarted.html %}
     {% include developers.html %}
 
     {% include footer.html %}
