Be less ambitious, lets just get something completed

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,23 +1,47 @@
- <!-- About Section -->
+<!-- About section -->
     <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-primary">
+        <div class="container portfolio">
+            <div class="main-feature">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h2>About</h2>
+                        <hr class="star-primary">
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <i class="fa fa-cogs"></i>
+                        <h4>Perl</h4>
+                        <p>We're proud to program it in <a target="_blank" href="https://www.perl.org/">Perl</a>.</p>
+                        <p>Feature-rich and 30 years young, read more <a target="_blank" href="https://www.perl.org/about.html">about why we love Perl...</a></p>
+                    </div>
+                    <div class="col-sm-4">
+                        <i class="fa fa-random"></i>
+                        <h4>Web Frameworks</h4>
+                        <p>We use <a target="_blank" href="http://www.mojolicious.org/">Mojolicious</a>, a real-time web framework.</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <i class="fa fa-code"></i>
+                        <h4>Made with Moose</h4>
+                        <p>We use <a target="_blank" href="https://metacpan.org/pod/Moose">Moose</a>, A postmodern object system for Perl 5. With Moose you can think more about what you want to do and less about the mechanics of OOP.</p>
+                    </div>
                 </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://metacpan.org/pod/HTML::FormFu" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download FormFu from CPAN
-                    </a>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <i class="fa fa-language"></i>
+                        <h4>Internationalization (i18n)</h4>
+                        <p>Error and notice messages are provided in 18+ languages. It's trivial to add yours, or swap in your own custom messages.</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <i class="fa fa-github"></i>
+                        <h4>Github</h4>
+                        <p>All the Project's source code, documentation, and even this website are hosted on <a target="_blank" href="https://github.com/FormFu">GitHub</a>. Contributions are easy and quickly reviewed.</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <i class="fa fa-rocket"></i>
+                        <h4>Free Software</h4>
+                        <p>FormFu is provided with a permissive license (<a href="https://fastapi.metacpan.org/source/NIGELM/HTML-FormFu-2.05/LICENSE">GPLv1 + Artistic</a>) so has no cost to use. Please understand the license requirements though.</p>
+                    </div>
                 </div>
             </div>
         </div>
