adjust getting started section

--- a/_includes/gettingstarted.html
+++ b/_includes/gettingstarted.html
@@ -1,5 +1,5 @@
 <!-- Getting Started Section -->
-    <section id="getttingstarted" class="beta">
+    <section id="gettingstarted" class="beta">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
