--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -34,3 +34,24 @@
     text-align: center;
 
 }
+
+.palette-button a:hover, .palette-button a:active, .palette-button a:focus {
+    outline: 0px none;
+    text-decoration: none;
+    color: #272323;
+    background-color: #18BC9C;
+}
+
+.palette-link {
+    display: block;
+    position: relative;
+    margin: 0px auto;
+    height: 300px;
+    background-color: #F5B142;
+    color: #272323;
+    font-size: 30px;
+}
+
+.palette-link .palette-text {
+    padding-top: 70px;
+}
