try these labels and icons.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,8 +10,25 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-4">
-                        <i class="fa fa-github"></i>
-                        <h4>Github</h4>
+                        <i class="fa fa-check-square-o"></i>
+                        <h4>Every Form Element</h4>
+                        <p>All the Project's source code, documentation, and even this website are hosted on <a target="_blank" href="https://github.com/FormFu">GitHub</a>. Contributions are easy and quickly reviewed.</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <i class="fa fa-upload"></i>
+                        <h4>File Uploads</h4>
+                        <p>We use <a target="_blank" href="http://www.mojolicious.org/">Mojolicious</a>, a real-time web framework.</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <i class="fa fa-filter"></i>
+                        <h4>Validate, Constrain, &amp; Filter</h4>
+                        <p>Error and notice messages are provided in 18+ languages. It's trivial to add yours, or swap in your own custom messages.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <i class="fa fa-database"></i>
+                        <h4>O.R.M. Integration</h4>
                         <p>All the Project's source code, documentation, and even this website are hosted on <a target="_blank" href="https://github.com/FormFu">GitHub</a>. Contributions are easy and quickly reviewed.</p>
                     </div>
                     <div class="col-sm-4">
