--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,29 +12,29 @@
                     <div class="col-sm-4">
                         <i class="fa fa-check-square-o"></i>
                         <h4>Every Form Element</h4>
-                        <p>All the Project's source code, documentation, and even this website are hosted on <a target="_blank" href="https://github.com/FormFu">GitHub</a>. Contributions are easy and quickly reviewed.</p>
+                        <p>Declare rather than code your forms. Every form element is available!</p>
                     </div>
                     <div class="col-sm-4">
                         <i class="fa fa-upload"></i>
                         <h4>File Uploads</h4>
-                        <p>We use <a target="_blank" href="http://www.mojolicious.org/">Mojolicious</a>, a real-time web framework.</p>
+                        <p>Receiving files from client uploads is made easy, just declare it as part of your form and don't worry about the details</p>
                     </div>
                     <div class="col-sm-4">
                         <i class="fa fa-filter"></i>
                         <h4>Validate, Constrain, &amp; Filter</h4>
-                        <p>Error and notice messages are provided in 18+ languages. It's trivial to add yours, or swap in your own custom messages.</p>
+                        <p>Select from an extensive range of included constrains and validators, or define your own. Use included or your own filters to massage data into the form you desire.</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-4">
                         <i class="fa fa-database"></i>
                         <h4>O.R.M. Integration</h4>
-                        <p>All the Project's source code, documentation, and even this website are hosted on <a target="_blank" href="https://github.com/FormFu">GitHub</a>. Contributions are easy and quickly reviewed.</p>
+                        <p>Dispense with even having to declare your forms by making use of DBIx::Class integration to auto-generate forms based upon your live schema.</p>
                     </div>
                     <div class="col-sm-4">
-                        <i class="fa fa-random"></i>
-                        <h4>Web Frameworks</h4>
-                        <p>We use <a target="_blank" href="http://www.mojolicious.org/">Mojolicious</a>, a real-time web framework.</p>
+                        <i class="fa fa-calendar"></i>
+                        <h4>Dates and Times</h4>
+                        <p>Date, Time and Date-Time inputs are well supported including Time Zones. Declare them, and FormFu takes care of validate and normalising into DateTime objects.</p>
                     </div>
                     <div class="col-sm-4">
                         <i class="fa fa-language"></i>
