--- a/_includes/gettingstarted.html
+++ b/_includes/gettingstarted.html
@@ -1,5 +1,5 @@
 <!-- Getting Started Section -->
-    <section id="gettingstarted" class="beta">
+    <section id="gettingstarted" class="success">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -17,18 +17,18 @@
                     </a>
                 </div>
                 <div class="col-sm-4 palette-button">
-                    <a target="_blank" href="/troubleshooting.html" class="palette-link">
+                    <a target="_blank" href="https://metacpan.org/pod/distribution/HTML-FormFu/lib/HTML/FormFu/Manual/Cookbook.pod" class="palette-link">
                         <div class="palette-text">
-                            <i class="fa fa-4x fa-life-saver"></i><br>
-                            Troubleshooting
+                            <i class="fa fa-4x fa-book"></i><br>
+                            Cookbook
                         </div>
                     </a>
                 </div>
                 <div class="col-sm-4 palette-button">
-                    <a target="_blank" href="/development_tools.html" class="palette-link">
+                    <a target="_blank" href="/troubleshooting.html" class="palette-link">
                         <div class="palette-text">
-                            <i class="fa fa-4x fa-puzzle-piece"></i><br>
-                            Contributing the Code
+                            <i class="fa fa-4x fa-life-saver"></i><br>
+                            Troubleshooting
                         </div>
                     </a>
                 </div>
