adjust getting started

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <i class="fa fa-check-square-o"></i>
-                        <h4>Every Form Element</h4>
+                        <h4>Declare Your Forms</h4>
                         <p>Declare rather than code your forms. Every form element is available!</p>
                     </div>
                     <div class="col-sm-4">
