--- a/_includes/help.html
+++ b/_includes/help.html
@@ -1,9 +1,9 @@
- <!-- About Section -->
-    <section id="about">
+ <!-- Help Section -->
+    <section id="help">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>Help</h2>
                     <hr class="star-primary">
                 </div>
             </div>
