--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     {% include header.html %}
     {% include about.html %}
     {% include gettingstarted.html %}
+    {% include help.html %}
 
     {% include footer.html %}
     {% include modals.html %}
