--- a/_includes/documentation.html
+++ b/_includes/documentation.html
@@ -1,5 +1,5 @@
- <!-- Help Section -->
-    <section id="help">
+ <!-- Documentation Section -->
+    <section id="documentation">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
