--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
                         <a href="#gettingstarted">Get Started</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#help">Help</a>
+                        <a href="#documentation">Documentation</a>
                     </li>
                 </ul>
             </div>
