--- a/_includes/documentation.html
+++ b/_includes/documentation.html
@@ -9,15 +9,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
+                    <h3>Official Doc's</h3>
                     <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
                 </div>
                 <div class="col-lg-4">
+                    <h3>Around the Web</h3>
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://metacpan.org/pod/HTML::FormFu" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download FormFu from CPAN
-                    </a>
                 </div>
             </div>
         </div>
