--- a/_includes/documentation.html
+++ b/_includes/documentation.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Help</h2>
+                    <h2>Documentation</h2>
                     <hr class="star-primary">
                 </div>
             </div>
