--- a/_includes/documentation.html
+++ b/_includes/documentation.html
@@ -10,10 +10,21 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <h3>Official Doc's</h3>
+                    <ul>
+                        <li>FormFu on <a href="https://metacpan.org/release/HTML-FormFu">MetaCPAN</a></li>
+                    </ul>
                     <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
                 </div>
                 <div class="col-lg-4">
-                    <h3>Around the Web</h3>
+                    <h3>3rd Party</h3>
+                    <ul>
+                        <li><a href="http://blogs.perl.org/users/kahlil_kal_hodgson/2015/06/hubble-bubble-toil-and-trouble-catalyst-bootstrap-and-htmlformfu.html">Catalyst, Bootstrap and HTML::FormFu</a> - Perl Blog (2015)</li>
+                        <li><a href="https://www.slideshare.net/djzort/formfu">Efficient web forms. So you can leave at 5pm each day.</a> - Sydney PM Talk (2014)</li>
+                        <li><a href="http://www.catalystframework.org/calendar/2012/17">Dynamic forms with HTML::FormFu</a> - Catalyst Advent Calendar (2012)</li>
+                        <li><a href="http://www.mechanicalrevolution.com/blog/html_formfu_manual.html">The Missing Manual</a> - By Peter Shangov</li>
+                        <li><a href="https://charlieharvey.org.uk/page/config_general_arrayref_formfu">Config::General arrayrefs and HTML::FormFu</a> - Blog Post (2010)</li>
+
+                    </ul>
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
                 </div>
             </div>
