--- a/_includes/documentation.html
+++ b/_includes/documentation.html
@@ -13,7 +13,6 @@
                     <ul>
                         <li>FormFu on <a href="https://metacpan.org/release/HTML-FormFu">MetaCPAN</a></li>
                     </ul>
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
                 </div>
                 <div class="col-lg-4">
                     <h3>3rd Party</h3>
@@ -25,7 +24,7 @@
                         <li><a href="https://charlieharvey.org.uk/page/config_general_arrayref_formfu">Config::General arrayrefs and HTML::FormFu</a> - Blog Post (2010)</li>
 
                     </ul>
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>Got a suggestion? Let us know!</p>
                 </div>
             </div>
         </div>
