Add link to website issues on gh

--- a/_includes/documentation.html
+++ b/_includes/documentation.html
@@ -24,7 +24,7 @@
                         <li><a href="https://charlieharvey.org.uk/page/config_general_arrayref_formfu">Config::General arrayrefs and HTML::FormFu</a> - Blog Post (2010)</li>
 
                     </ul>
-                    <p>Got a suggestion? Let us know!</p>
+                    <p>Got a suggestion? <a href="https://github.com/FormFu/formfu.github.io/issues">Let us know!</a></p>
                 </div>
             </div>
         </div>
