--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,11 +4,9 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>{{ site.footer.location }}</h3>
+                        <h3>Code Status</h3>
                         <p>
-                            {% for adress in site.address %}
-                                {{ adress.line }} <br>
-                            {% endfor %}
+                            Put ruby icon thingies here<br />
                         </p>
                     </div>
                     <div class="footer-col col-md-4">
