--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Code Status</h3>
+                        <h3>{{ site.footer.lhs }}</h3>
                         <p>
                             Put ruby icon thingies here<br />
                         </p>
@@ -20,8 +20,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>{{ site.footer.credits }}</h3>
-                        <p>{{ site.credits }}</p>
+                        <h3>{{ site.footer.rhs }}</h3>
+                        <p>{{ site.about }}</p>
                     </div>
                 </div>
             </div>
