--- a/_includes/documentation.html
+++ b/_includes/documentation.html
@@ -11,7 +11,11 @@
                 <div class="col-lg-4 col-lg-offset-2">
                     <h3>Official Doc's</h3>
                     <ul>
-                        <li>FormFu on <a href="https://metacpan.org/release/HTML-FormFu">MetaCPAN</a></li>
+                        <li>FormFu on <a href="https://metacpan.org/pod/HTML-FormFu">MetaCPAN</a></li>
+                        <li>Working with <a href="https://metacpan.org/pod/HTML::FormFu::Manual::Unicode">Unicode</a></li>
+                        <li>Using FormFu with <a href="https://metacpan.org/pod/HTML::FormFu::Model::DBIC">DBIx::Class</a></li>
+                        <li><a href="https://metacpan.org/pod/HTML::FormFu::Imager">Imager helpers</a> for FormFu</li>
+                        <li>FormFu <a href="https://metacpan.org/pod/Catalyst::Controller::HTML::FormFu">Catalyst Controller</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4">
