--- a/_includes/about.html
+++ b/_includes/about.html
@@ -28,8 +28,8 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <i class="fa fa-database"></i>
-                        <h4>O.R.M. Integration</h4>
-                        <p>Dispense with even having to declare your forms by making use of DBIx::Class integration to auto-generate forms based upon your live schema.</p>
+                        <h4>Database Integration</h4>
+                        <p>Dispense with even having to declare your forms by making use of DBIx::Class integration to auto-generate forms based upon your live schema. Or from LDAP.</p>
                     </div>
                     <div class="col-sm-4">
                         <i class="fa fa-calendar"></i>
