add travis things

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,9 @@
                     <div class="footer-col col-md-4">
                         <h3>{{ site.footer.lhs }}</h3>
                         <p>
-                            Put ruby icon thingies here<br />
+                            {% for trav in site.travis %}
+                            {{ trav.title }} <img src="{{ trav.url }}" /><br />
+                            {% endfor %}
                         </p>
                     </div>
                     <div class="footer-col col-md-4">
